--- a/navbar.css
+++ b/navbar.css
@@ -3,14 +3,14 @@
   display: flex;
   justify-content: right;
   align-items: center;
-  text-align: right !important ;
+  text-align: right;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
   height: 70px;
   z-index: 1;
 }
-
+  
 .nav{
   display: inline-block;
   text-align: right;
@@ -31,6 +31,7 @@
 }
 
 .logo{
+  float: left;
   width: 37%;
   height: 37%;
   flex: 1;
