bg color changed

--- a/navbar.css
+++ b/navbar.css
@@ -3,14 +3,15 @@
   display: flex;
   justify-content: right;
   align-items: center;
-  text-align: right !important ;
+  text-align: right;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
   height: 70px;
   z-index: 1;
+  background-color: rgba(0,0,0,1);
 }
-
+  
 .nav{
   display: inline-block;
   text-align: right;
@@ -21,16 +22,11 @@
   margin-bottom: 15px ;
   background: none !important;
   text-transform: uppercase;
-  li{
-    margin-left: 3em;
-    margin-right:   3em;
-    a{
-      transition: .5s color ease-in-out;
-    }
-  }
+  
 }
 
 .logo{
+  float: left;
   width: 37%;
   height: 37%;
   flex: 1;
@@ -136,6 +132,3 @@ body {
 .page-title {
   opacity: .75 !important;
 }  
-.nav-color{
-  background-color: rgba(0,0,0,1);
-}
