--- a/navbar.css
+++ b/navbar.css
@@ -7,9 +7,11 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  height: 70px;
+  height: 50px;
   z-index: 1;
   background-color: rgba(0,0,0,1);
+  top:0;
+  transition: top 0.3s;
 }
   
 .nav{
@@ -28,7 +30,7 @@
 .logo{
   float: left;
   width: 37%;
-  height: 37%;
+  height: 55px;
   flex: 1;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -125,7 +127,7 @@ body {
   padding: 0%;
   background-color: rgba(0,0,0,1);
   font-weight:600;
-  text-align:center !important;
+  text-align:center;
   color: white;
 }
 
